--- a/src/App.css
+++ b/src/App.css
@@ -1,95 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-:root {
-    --red: #c43942;
-    --yellow: #F1821A;
-}
+
 body {
     font-family: "poppins", sans-serif;
     background-color: #FAF9F9;
 }
 *{
     margin: 0;
-    margin-left: 10px;
-    margin-right: 10px;
-}.git
-
-button {
-    all: unset;
-    padding: 6px 16px;
-    align-content: center;
-    font-weight: 500;
-    height : 25.56px;
-}
-.b{
-    display: flex;
-    gap: 8px;
-}
-.b1{
-    width: 65px;
-    text-align: center;
-    background: transparent;
-    color: var(--red);
-    border: solid 2px var(--red);
-    border-radius: 10px;
-}
-.b2{
-    width: 65px;
-    text-align: center;
-    background: var(--red);
-    color: white;
-    border: solid 2px var(--red);
-    border-radius: 10px;
+  
 }
 
-nav {
-    display: flex;
-    justify-content: space-between;
-    height: 92px;
-    align-items: center;
-}
 
-nav ul {
-    display: flex;
-    list-style: none;
-    gap: 20px;
-    align-items: center;
-    font-size: 12px;
-}
-
-.logo {
-    /* align-items: center; */
-    margin: 0 0 0 0;
-}
 .container{
-    max-width: 1440px;
-    margin: 0 auto;
-}
-.hero h1 {
-    display: flex;
-    align-items: center;
-    height:calc(100vh-94px);
-}
-.hero p {
-    font-weight: 600;
-    color: grey;
-    
-}
-.hero-button {
-    display: flex;
-    gap : 10px;
-    border: solid ;
-
-}
-.secondary-btn {
-    background: transparent;
-    color: #c43942;
-    width: max-content;
-    text-align: center;
-}
-.primary-btn {
-    background: var(--red);
-    text-align: center;
-    width: max-content;
-    color: #fff;
+    max-width: 1280px;
+    margin: 0 16px;
 }
