--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,55 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-
 body {
     font-family: "poppins", sans-serif;
     background-color: #FAF9F9;
 }
 *{
     margin: 0;
-  
+    padding: 0;
+    box-sizing: border-box;
+}
+.containerHead{
+    display: flex;
+    justify-content: center;
 }
 
-
-.container{
+div.container{
     max-width: 1280px;
-    margin: 0 16px;
+    margin: 0 auto;
+    padding: 0 15px;
 }
+
+@media (min-width: 1024px) {
+    div.container {
+        max-width: 1280px;
+        padding: 0 20px;
+    }
+}
+
+@media (max-width: 1024px) {
+    div.container {
+        max-width: 960px;
+        padding: 0 15px;
+    }
+    
+    .containerHead {
+        justify-content: space-between;
+    }
+}
+
+@media (max-width: 768px) {
+    div.container {
+        max-width: 100%;
+        padding: 0 10px;
+    }
+
+    .containerHead {
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
+/* .navi{
+    margin: 0px 16px;
+} */
