--- a/src/components/slide.module.css
+++ b/src/components/slide.module.css
@@ -1,16 +1,77 @@
 :root {
     --grey : #666;
 }
-.slide{
+.slideContainer{
+    position: relative;
     display: flex;
+    flex-direction: column; 
     justify-content: center;
     align-items: center;
-    width: 1280px;
+    max-width: 1280px;
     height: 400px;
+    overflow: hidden;
+
+}
+.slides {
+    display: flex;
+    transition: transform 0.5s ease-in-out;
+    width: 100%;
 }
 .image {
-    border-radius: 10px;
+    border-radius: 0.5rem;
     box-shadow: 0 0 7px var(--grey);
     height: 100%;
-    width: 100%;
+    min-width: 100%;
+    flex-shrink: 0;
+}
+.hiddenImage{
+    display: none;
+}
+.arrow{
+    position: absolute;
+    width: 2rem;
+    height: 2rem;
+    color: white;
+    filter: drop-shadow(0px 0px 5px #555);
+    margin:8px;
+}
+.arrow:hover {
+    cursor: pointer;
+}
+.arrowLeft{
+    left: 1rem;
+}
+.arrowRight{
+    right: 1rem;
+}
+.indicators{
+    display: flex;
+    position: absolute;
+    bottom: 1rem;
+}
+.indicator{
+    background-color: white; 
+    opacity: 90%;
+    height: 3px;
+    width: 9px;
+    border-radius: 100%;
+    border: none;
+    outline: none;
+    box-shadow: 0 0 5px #555;
+    margin: 0 0.2rem;
+    cursor: pointer;
+}
+.inactiveIndicator{
+    background-color: grey;
+}
+
+@media (max-width: 768px) {
+    .slideContainer{
+        height: 200px;
+
+    }
+    .arrow{
+    width: 1rem;
+    height: 1rem;
+    }
 }
